<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Text for displaying ad skip wait time. -->
    <string name="MediaControlView_ad_skip_wait_time">
        You can skip Ad in <xliff:g id="wait_time" example="5">%1$d</xliff:g>s
    </string>
    <!-- Text for displaying ad total remaining time. -->
    <string name="MediaControlView_ad_remaining_time">
        Ad · <xliff:g id="remaining_time" example="1:15">%1$s</xliff:g> remaining
    </string>
    <!-- Placeholder text indicating that the user can press the button to go to an external website. -->
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string-array translatable="false" name="MediaControlView_playback_speeds">
        <item>0.25x</item>
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2x</item>
    </string-array>
    <!-- Text for displaying custom playback speed. -->
    <string translatable="false" name="MediaControlView_custom_playback_speed_text">
        <xliff:g id="playback_speed" example="1.05">%1$.2f</xliff:g>x
    </string>
    <!-- Placeholder text for displaying time. Used to calculate which size layout to use. -->
    <string name="MediaControlView_time_placeholder">00:00:00</string>

    <!-- Text for displaying subtitle track number without language info. -->
    <string name="MediaControlView_subtitle_track_number_text">
        Track <xliff:g id="track_number" example="1">%1$d</xliff:g>
    </string>
    <!-- Text for displaying subtitle track number with language info. -->
    <string name="MediaControlView_subtitle_track_number_and_lang_text">
        Track <xliff:g id="track_number" example="1">%1$d</xliff:g> - <xliff:g id="lang" example="eng">%2$s</xliff:g>
    </string>
    <!-- Text for displaying audio track number. -->
    <string name="MediaControlView_audio_track_number_text">
        Track <xliff:g id="audio_number" example="1">%1$d</xliff:g>
    </string>
    <!-- Text for displaying unknown song title. -->
    <string name="mcv2_music_title_unknown_text">Song title unknown</string>
    <!-- Text for displaying unknown artist name. -->
    <string name="mcv2_music_artist_unknown_text">Artist unknown</string>
    <!-- Text for error alert when a video cannot be played. It can be used by any app. -->
    <string name="mcv2_playback_error_text">Couldn\'t play the item you requested</string>
    <!-- Button to close error alert when a video cannot be played. -->
    <string name="mcv2_error_dialog_button">OK</string>

    <!--Content Descriptions -->
    <string name="mcv2_back_button_desc">Back</string>
    <string name="mcv2_overflow_left_button_desc">Back to previous button list</string>
    <string name="mcv2_overflow_right_button_desc">See more buttons</string>
    <string name="mcv2_seek_bar_desc">Playback progress</string>
    <string name="mcv2_settings_button_desc">Settings</string>
    <string name="mcv2_video_quality_button_desc">Video Quality Selection</string>
    <string name="mcv2_cc_is_on">Subtitle is on. Click to hide it.</string>
    <string name="mcv2_cc_is_off">Subtitle is off. Click to show it.</string>
    <string name="mcv2_replay_button_desc">Replay</string>
    <string name="mcv2_play_button_desc">Play</string>
    <string name="mcv2_pause_button_desc">Pause</string>
    <string name="mcv2_previous_button_desc">Previous media</string>
    <string name="mcv2_next_button_desc">Next media</string>
    <string name="mcv2_rewind_button_desc">Rewind by 10 seconds</string>
    <string name="mcv2_ffwd_button_desc">Go forward by 30 seconds</string>
    <string name="mcv2_launch_button_desc">Launch Link</string>
    <string name="mcv2_full_screen_button_desc">Full screen</string>
</resources>
