...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text"
                android:gravity="center_vertical"
                android:ellipsize="middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingStart="@dimen/mcv2_embedded_icon_padding"
...
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/subtitle"
            style="@style/BottomBarButton.CC"
            android:alpha="0.5"
            android:scaleType="fitCenter"
            android:visibility="gone" />

        <ImageButton
...
